# sd-dreamliners

./: .clang-format  .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
datasets/coco8/labels/: val.cache
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  PLAN.md
pi/: Modelfile.belt  config.py  main.py  models.py
pi/bench/: voice_turn.py  yolo_backend.py  yolo_fps.py
pi/services/: camera.py  fusion.py  narrator.py  pi_mic_recorder.py  serial_bridge.py  voice.py  webapp_server.py  yolo.py  yolo_ei.py  yolo_qaihub.py
tools/: e2e_smoke.py  fake_m5.py  preview_server.py  test_llm_intent.py  test_serial_bridge.py
webapp/: app.js  demo.html  index.html  styles.css
