[project]
name = "fusion-belt"
version = "0.1.0"
description = "On-device, hardware-accelerated LLM + voice agent for a haptic navigation belt."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # FastAPI uses Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"pi/bench/**" = ["ALL"]  # benchmarks have hardcoded numbers, do not touch
"tests/**"    = ["B011"]
"archive/**"  = ["ALL"]  # archived duplicates, not maintained

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
